Dec 20 2002  2.7.1  Fixed turbocell ssid's not being munged
Dec 19 2002  2.7.1  Fixed gps point logging of PHY packets
Dec 17 2002  2.7.1  Fixed kismet_hopper on systems with old wireless extention
                     versions.
                    Revamped packet capture stream.  Live-decoded wep packets
                     are now logged as encrypted data again.
                    Added CRC32 checking of WEP data
Dec 16 2002  2.7.1  Added error handling for client access control 'network'
                     addresses which aren't valid network addresses (ie,
                     10.0.0.1/24 is not valid.)
Dec 15 2002  2.7.1  Added netmask-based client access control
                    Fixed saved ip loading
Dec 14 2002  2.7.1  Added client-controlled WEP decryption keys
                    Fixed ERROR protocol handling in tcpclient
Dec 13 2002  2.7.1  Added ERROR protocol handling to tcpclient
Dec 11 2002  2.7.1  Merged more hopper patches from Anders Gustafsson
                    Fixed tcpserver client line order
Dec 10 2002  2.7.1  Fixed some packet dissection and wep/interesting detection
                     bugs with fuzzy encryption mode
                    Added (broken) WEP decoding.  Right now this is just a 
                     bit-blender, I'm not sure it's going to give you ANYTHING
                     useful and it's not user-controllable yet.
                    Fixed WEP decoding, at least on the tests so far.  See the
                     'wepkey' config file option.  This is NOT for wep 
                     cracking - this is for decoding traffic on networks with
                     a known key (ie, monitoring stationary networks)
                    Fixed string extraction from decoded packets
                    Updated configure to look for ethereal 0.9.8
                    Minor fix to kismet_hopper (Anders Gustafsson)
                    Fixed WSP100 capture source flagging all packets as FCS
                     errors.